src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_review_board_reviewer_mode.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 Tasks  │  ▸ Reviews (3)  │  Security   [Tab] security  [S-Tab] toggle                                            🔕  [N]
▸ Backlog (2)                 ◦ Ongoing (0)                 ◦ Action Required (0)         ◦ Done (1)
Updated 0s ago  [r] refresh
  ── app                                                                                    ── app
▌ #1 PR 1 ●                                                                               ▎ #2 PR 2 ●
  ● – · @alice · +10/-5 · <1h                                                               ● – · @bob · +10/-5 · <1h
▎ #3 PR 3 ●
  ● – · @carol · +10/-5 · <1h































[Enter] open PR  [d]ispatch  [f]ilter  [e]dit queries  [a]pprove  [m]erge  [1/2] mode  [Tab] task board  [?] help  [q]ui
