src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_scroll_indicator_down.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 5 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│                           │                              │
  ▌ #1 Task 1                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
                              │                           │                              │
                             ▼│                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit
