src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_scroll_indicator_up.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 ▸ Tasks                                                                                                          🔕  [N]
        ▸ backlog 5 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
─────────────────────────────▲│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│                           │                              │
  ▎ #4 Task 4                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
  ▌ #5 Task 5                 │                           │                              │
   ◦ <1h                      │                           │                              │
                              │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [S]plit
