src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_tab_bar_with_feed_epics_board_active.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 ▸ Tasks  │  My Feed  │  Another Feed                                                                             🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│                           │                              │
  ▌ #1 My Feed                │                           │                              │
    no subtasks               │                           │                              │
──────────────────────────────│                           │                              │
  ▎ #2 Another Feed           │                           │                              │
    no subtasks               │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[d] plan  [g] board  [G] session  [Enter] detail  [e]dit  [W]rap up  [U] auto dispatch  [r]efresh  [L] status →  [H] sta
