src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_tab_bar_with_feed_epics_feed_active.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
[Default]   Tasks  │  ▸ My Feed  │  Another Feed                              manual dispatch [U]  group:off [R]  🔕  [N]
        ▸ backlog 0 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
╭ My Feed ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│──────────────────────────────│──────────────────────────│──────────────────────────────│─────────────────────────────│
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[a] select all  [n]ew  [E]pic  [D] quick  [S]plit  [F]lat  [f]ilter  [I] learnings  [?] help  [q] projects
