src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_task_detail_overlay_empty_optional_fields.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 Tasks                                                                                                            🔕  [N]
        ▸ backlog 1 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│                           │                              │
  ▌ #1 Task 1                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
┌ Task #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Repo:  /repo/path                                                                                                     │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│Just a description.                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└ j/k scroll · z zoom · q/Esc/Enter close ─────────────────────────────────────────────────────────────────────────────┘
[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [S]plit
