src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_task_detail_overlay_peek.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 Tasks                                                                                                            🔕  [N]
        ▸ backlog 1 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│                           │                              │
  ▌ #1 Task 1                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
┌ Task #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Repo:  /repo/my-project                                                                                               │
│PR:    https://github.com/org/repo/pull/42                                                                            │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│First line of description.                                                                                            │
│Second line.                                                                                                          │
│Third line.                                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└ j/k scroll · z zoom · q/Esc/Enter close ─────────────────────────────────────────────────────────────────────────────┘
[d] brainstorm  [e]dit  [L] move  [x] archive  [p] open PR  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] q
